# job-ping

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  seed.py
app/adapters/: amazon_jobs.py  ashby.py  base.py  direct_html.py  generic_playwright.py  generic_static.py  google_careers.py  greenhouse.py  lever.py  nextjs_static.py  oracle_hcm.py  phenom_static.py  registry.py  smartrecruiters.py  tesla.py  workday.py
app/api/: checks.py  companies.py  jobs.py  settings.py
app/models/: __init__.py  check_run.py  company.py  job.py  job_alert.py
app/schemas/: company.py  job.py
app/services/: company_service.py  json_helpers.py  matcher.py  notifier.py  scheduler.py  source_detector.py  tracker.py
app/templates/: base.html  companies.html  dashboard.html  jobs.html  settings.html
scripts/: probe_workday.py  run_starter_checks.py
tests/: conftest.py  test_adapters.py  test_direct_html_adapter.py  test_generic_static.py  test_matcher.py  test_nextjs_static_adapter.py  test_oracle_hcm_adapter.py  test_phenom_static_adapter.py  test_tesla_adapter.py  test_tracker.py
